--- a/calculadoraTeste/css/style.css
+++ b/calculadoraTeste/css/style.css
@@ -1,7 +1,7 @@
 body{
     padding: 0;
     margin: 0; 
-    background-image: url("/img/background3.png");
+    background-image: url("../img/background3.png");
     background-size: cover;
     color: white;
 }
