Arrumando erro de undefined, ajustando CSS para espaço da caixa dos inputs ficar mais arrumado. Foi nescessário o aumento da caixa dos grande que contém os inputs.

--- a/calculadoraTeste-CSS/css/style.css
+++ b/calculadoraTeste-CSS/css/style.css
@@ -64,7 +64,7 @@ input{
 
 .container-Cfrota{
     width: 400px;
-    height: 500px;
+    height: 540px;
     display: flex;
     flex-direction: column;
     /* text-align: center; */
@@ -95,6 +95,7 @@ input{
     border-left: none;
     border-right: none;
     margin-bottom: 35px;
+    margin-top: 10px;
 }
 
 .btnCalc{
