--- a/calculadoraTeste-CSS/css/style.css
+++ b/calculadoraTeste-CSS/css/style.css
@@ -80,8 +80,8 @@ input{
     justify-content: center;
     margin-right: auto;
     margin-left: auto;
-    height: 40px;
-    width: 200px;
+    height: 60px;
+    width: 250px;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
     transform: translateY(-45px);
@@ -117,17 +117,26 @@ input{
     border: 2px solid;
 }
 
-
-.destaque1 {
-    color: red;
+.txtinner{
     font-weight: bold;
 }
 
-.destaque3{
-    color: rgba(21, 166, 21, 0.763);
-    font-weight: bold;
+.txtresults {
+    color: #db0000;
+    font-weight: bolder;
 }
 
+.divresults {
+    margin: 10%;
+    background-color: white;
+}
+
+.divseparator {
+    background-color: #262523;
+    width: 100%;
+    height: 3px;
+    justify-content: center;
+}
 
 
 
