comentários finais para transferência do projeto

--- a/calculadoraTeste-CSS/css/style.css
+++ b/calculadoraTeste-CSS/css/style.css
@@ -85,7 +85,7 @@ input{
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
     transform: translateY(-45px);
-    background-color: #db0000;
+    background-color: green;
     color: white;
 }
 
