--- a/pages/style.css
+++ b/pages/style.css
@@ -8,7 +8,7 @@
 
 body {
   height: 100vh;
-  background-image: url(./img/Background.png);
+  background-image: url("../img/Background.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -27,7 +27,7 @@ header {
 }
 
 .background {
-  background-image: url("img/Background.png");
+  background-image: url("../img/Background.png");
   background-size: cover;
   background-position: center;
   height: 85vh;
@@ -85,7 +85,7 @@ img {
   width: 50px;
   height: 50px;
   align-items: center;
-  background-image: url("img/hamburguer.png");
+  background-image: url("../img/hamburguer.png");
   background-size: cover;
   background-color: transparent;
   border: none;
