Arrumando a Responsividade do Site

--- a/pages/styles/login.css
+++ b/pages/styles/login.css
@@ -22,8 +22,9 @@ a{
 
 .login {
   background-color: #ffffff7e;
+  margin-top: -3%;
   padding: 20px;
-  height: 70%;
+  height: 90%;
   width: 20%;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
