--- a/pages/styles/Cadastro1.css
+++ b/pages/styles/Cadastro1.css
@@ -16,15 +16,15 @@ a{
   background-image: url('../../img/Background.png');
   background-size: cover;
   background-position: center;
-  height: 91.2vh;
+  height: 140vh;
   flex-direction: column;
   display: flex;
 }
 
 .Cadastro {
   background-color: #ffffff7e;
+  margin-top: 2%;
   padding-top: 20px;
-  height: 100%;
   width: 30%;
   border-radius: 10px;
   display: flex;
@@ -34,10 +34,9 @@ a{
 }
 
 .container {
-  height: 100%;
+  height: 150vh;
   display: flex;
   justify-content: center;
-  margin-bottom: 2rem;
 }
 
 h2 {
