--- a/pages/styles/Cadastro2.css
+++ b/pages/styles/Cadastro2.css
@@ -16,7 +16,7 @@ a{
   background-image: url('../../img/Background.png');
   background-size: cover;
   background-position: center;
-  height: 91.2vh;
+  height: 120vh;
   flex-direction: column;
   display: flex;
 }
@@ -114,8 +114,9 @@ img {
 }
 
 .botao {
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
+  margin-top: -1%;
   align-items: center;
   background-image: url('../../img/hamburguer.png');
   background-size: cover;
