--- a/pages/style.css
+++ b/pages/style.css
@@ -213,7 +213,7 @@ img {
 
 #sobre-nos .container {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   justify-content: space-around;
   padding: 0 6rem;
   gap: 6rem;
@@ -222,7 +222,7 @@ img {
 #sobre-nos .container .card {
   width: 40%;
   margin-bottom: 20px;
-  height: 250px;
+  height: 450px;
   background-color: #fff;
   box-shadow: 0px 0px 19px 7px rgba(0,0,0,0.75);
   padding: 20px;
@@ -233,6 +233,16 @@ img {
   align-items: center;
   overflow: auto;
   text-align: center;
+}
+
+.card-imagem{
+  width: 60%;
+  height: 50%;
+}
+
+.estrela{
+  width: 80%;
+  height: 70%;
 }
 
 #sobre-nos .container .nossos-valores{
