Fazendo as telas das Linhas

--- a/pages/style.css
+++ b/pages/style.css
@@ -1,334 +1,334 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
-  height: 100vh;
-  background-image: url("../img/Background.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  font-family: "Roboto", sans-serif;
+	height: 100vh;
+	background-image: url("../img/Background.png");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	font-family: "Roboto", sans-serif;
 }
 
 header {
-  position: relative;
-  height: 70px;
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: #001d3d;
-  z-index: 1;
+	position: relative;
+	height: 70px;
+	font-weight: bold;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	background-color: #001d3d;
+	z-index: 1;
 }
 
 .background {
-  background-image: url("../img/Background.png");
-  background-size: cover;
-  background-position: center;
-  height: 85vh;
-  flex-direction: column;
-  display: flex;
+	background-image: url("../img/Background.png");
+	background-size: cover;
+	background-position: center;
+	height: 85vh;
+	flex-direction: column;
+	display: flex;
 }
 
 .login {
-  background-color: rgba(255, 255, 255, 0.9);
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  text-align: center;
+	background-color: rgba(255, 255, 255, 0.9);
+	padding: 20px;
+	border-radius: 10px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	text-align: center;
 }
 
 .container {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .itemsHeader a {
-  text-decoration: none;
-  color: #fff;
+	text-decoration: none;
+	color: #fff;
 }
 
 .itemsHeader a:hover {
-  text-decoration: underline #f5cc00;
-  color: #f5cc00;
+	text-decoration: underline #f5cc00;
+	color: #f5cc00;
 }
 
 img {
-  top: 0;
-  height: 200px;
-  width: 145px;
-  clip-path: inset(50px 20px 69px 0 round 50px);
+	top: 0;
+	height: 200px;
+	width: 145px;
+	clip-path: inset(50px 20px 69px 0 round 50px);
 }
 
 .itemsHeader {
-  display: flex;
-  column-gap: 25px;
-  margin-right: 50px;
-  color: white;
-  align-items: center;
+	display: flex;
+	column-gap: 25px;
+	margin-right: 50px;
+	color: white;
+	align-items: center;
 }
 
 .underheader {
-  display: flex;
-  justify-content: end;
-  height: 80px;
+	display: flex;
+	justify-content: end;
+	height: 80px;
 }
 
 .botao {
-  width: 50px;
-  height: 50px;
-  align-items: center;
-  background-image: url("../img/hamburguer.png");
-  background-size: cover;
-  background-color: transparent;
-  border: none;
-  padding: 10px 10px;
-  border-radius: 100%;
-  cursor: pointer;
-  transition: 0.3s;
-  align-items: center;
-  justify-content: center;
+	width: 50px;
+	height: 50px;
+	align-items: center;
+	background-image: url("../img/hamburguer.png");
+	background-size: cover;
+	background-color: transparent;
+	border: none;
+	padding: 10px 10px;
+	border-radius: 100%;
+	cursor: pointer;
+	transition: 0.3s;
+	align-items: center;
+	justify-content: center;
 }
 
 .options {
-  height: 75px;
-  display: none;
-  top: 100%;
-  margin-right: 30px;
-  background-color: #003566;
-  padding: 10px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.2);
+	height: 75px;
+	display: none;
+	top: 100%;
+	margin-right: 30px;
+	background-color: #003566;
+	padding: 10px;
+	border-radius: 10px;
+	box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.2);
 }
 
 .options a {
-  display: block;
-  padding: 5px;
-  right: 0;
-  text-decoration: none;
-  color: #fff;
+	display: block;
+	padding: 5px;
+	right: 0;
+	text-decoration: none;
+	color: #fff;
 }
 
 .options a:hover {
-  background-color: #003566;
-  color: #f5cc00;
+	background-color: #003566;
+	color: #f5cc00;
 }
 
 /* MAIN */
 
 .container-main {
-  margin-left: 2rem;
-  margin-top: 7rem;
-  color: #fff;
-  text-align: center;
+	margin-left: 2rem;
+	margin-top: 7rem;
+	color: #fff;
+	text-align: center;
 }
 
 .container-main h1 {
-  font-size: 7rem;
+	font-size: 7rem;
 }
 
 .container-main h1 span {
-  color: #f5cc00;
+	color: #f5cc00;
 }
 
 .container-main p {
-  font-size: 1.5rem;
+	font-size: 1.5rem;
 }
 
 .container-main p span {
-  color: #f5cc00;
-  font-weight: 800;
+	color: #f5cc00;
+	font-weight: 800;
 }
 
 /* SERVIÇOS */
 
 .servicos-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 2rem;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 2rem;
 }
 
 .servico-card {
-  width: 350px;
-  height: 200px;
-  margin: 20px;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease;
-  text-align: center;
+	width: 350px;
+	height: 200px;
+	margin: 20px;
+	padding: 20px;
+	background-color: #fff;
+	border-radius: 8px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	transition: transform 0.3s ease;
+	text-align: center;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
 }
 
 .servico-card:hover {
-  transform: translateY(-5px);
+	transform: translateY(-5px);
 }
 
 .servico-card h3 {
-  color: #f5cc00;
-  font-size: 20px;
+	color: #f5cc00;
+	font-size: 20px;
 }
 
 .servico-card p {
-  color: #000;
+	color: #000;
 }
 
 #nossos-servicos {
-  background-color: #001d3d;
-  padding-top: 50px;
-  padding-bottom: 100px;
-  text-align: center;
+	background-color: #001d3d;
+	padding-top: 50px;
+	padding-bottom: 100px;
+	text-align: center;
 }
 
 #nossos-servicos h2 {
-  color: #fff;
-  font-size: 2.5rem;
-  margin-bottom: 1rem;
+	color: #fff;
+	font-size: 2.5rem;
+	margin-bottom: 1rem;
 }
 
 /* SOBRE NÓS */
 
 #sobre-nos {
-  background-color: #fff;
-  padding: 50px 0;
+	background-color: #fff;
+	padding: 50px 0;
 }
 
 .titulo-sobreNos {
-  text-align: center;
-  margin-bottom: 5rem;
-  font-size: 2.5rem;
+	text-align: center;
+	margin-bottom: 5rem;
+	font-size: 2.5rem;
 }
 
 #sobre-nos .container {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-around;
-  padding: 0 6rem;
-  gap: 6rem;
+	display: flex;
+	flex-wrap: nowrap;
+	justify-content: space-around;
+	padding: 0 6rem;
+	gap: 6rem;
 }
 
 #sobre-nos .container .card {
-  width: 40%;
-  margin-bottom: 20px;
-  height: 450px;
-  background-color: #fff;
-  box-shadow: 0px 0px 19px 7px rgba(0,0,0,0.75);
-  padding: 20px;
-  border-radius: 10px;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  overflow: auto;
-  text-align: center;
+	width: 40%;
+	margin-bottom: 20px;
+	height: 450px;
+	background-color: #fff;
+	box-shadow: 0px 0px 19px 7px rgba(0, 0, 0, 0.75);
+	padding: 20px;
+	border-radius: 10px;
+	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	overflow: auto;
+	text-align: center;
 }
 
-.card-imagem{
-  width: 60%;
-  height: 50%;
+.card-imagem {
+	width: 60%;
+	height: 50%;
 }
 
-.estrela{
-  width: 80%;
-  height: 70%;
+.estrela {
+	width: 80%;
+	height: 70%;
 }
 
-#sobre-nos .container .nossos-valores{
-  text-align: start;
+#sobre-nos .container .nossos-valores {
+	text-align: start;
 }
 
 #sobre-nos .container h2 {
-  text-align: center;
-  font-size: 24px;
-  color: #000;
-  margin-bottom: 30px;
+	text-align: center;
+	font-size: 24px;
+	color: #000;
+	margin-bottom: 30px;
 }
 
 #sobre-nos .container h3 {
-  color: #000;
-  margin-bottom: 20px;
+	color: #000;
+	margin-bottom: 20px;
 }
 
 #sobre-nos .container p {
-  color: #001d3d;
-  line-height: 1.6;
-  margin-bottom: 20px;
+	color: #001d3d;
+	line-height: 1.6;
+	margin-bottom: 20px;
 }
 
 #sobre-nos .container ul {
-  margin-left: 20px;
-  margin-bottom: 20px;
+	margin-left: 20px;
+	margin-bottom: 20px;
 }
 
 #sobre-nos .container li {
-  color: #001d3d;
-  line-height: 1.6;
+	color: #001d3d;
+	line-height: 1.6;
 }
 
 #sobre-nos .container .form-group {
-  margin-bottom: 20px;
-  width: 100%;
+	margin-bottom: 20px;
+	width: 100%;
 }
 
 #sobre-nos .container label {
-  display: block;
-  margin-bottom: 5px;
-  color: #333;
+	display: block;
+	margin-bottom: 5px;
+	color: #333;
 }
 
 #sobre-nos .container input[type="text"],
 #sobre-nos .container input[type="email"],
 #sobre-nos .container textarea {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  max-width: 100%;
+	width: 100%;
+	padding: 10px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	max-width: 100%;
 }
 
 #sobre-nos .container button[type="submit"] {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s;
+	background-color: #007bff;
+	color: #fff;
+	border: none;
+	padding: 10px 20px;
+	border-radius: 5px;
+	cursor: pointer;
+	transition: background-color 0.3s;
 }
 
 #sobre-nos .container button[type="submit"]:hover {
-  background-color: #0056b3;
+	background-color: #0056b3;
 }
 
 /* FOOTER */
 
 .footer {
-  height: 120px;
-  background-color: #003566;
-  color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	height: 120px;
+	background-color: #003566;
+	color: #fff;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .footer .container {
-  text-align: center;
-  align-items: center;
-  justify-content: center;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
 }
 
 .footer .container p {
-  font-weight: bold;
+	font-weight: bold;
 }
