--- a/API-Web-Data-Viz/public/css/dashboard.css
+++ b/API-Web-Data-Viz/public/css/dashboard.css
@@ -268,11 +268,23 @@ do "@media (max-width: 768px)" */
 }
 
 .main-content .alertas .emergencia {
-	height: 50px;
-	width: 50px;
-	background-color: red;
-	box-shadow: 0 0 20px rgba(255, 0, 0, 0.8);
-	transition: 1s;
+    height: 90px;
+    width: 90px;
+    background-color: red;
+    box-shadow: 0 0 20px rgba(255, 0, 0, 0.8);
+    transition: 1s;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.main-content .alertas .divAlertText {
+    margin: 0;
+    height: 40%;
+    width: 100%;
+    background-color: white;
+    display: flex;
+    align-items: end;
 }
 
 /*
@@ -284,16 +296,19 @@ do "@media (max-width: 768px)" */
 } */
 
 .main-content .alertas .atencao {
-	height: 50px;
-	width: 50px;
-	background-color: rgba(255, 255, 0, 0.404);
+	height: 90px;
+    width: 90px;
+    background-color: rgba(255, 255, 0, 0.404);
 	border: 1px solid yellow;
-	transition: 1s;
+    transition: 1s;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+	
 }
 
 .main-content .alertas .atencao:hover {
-	height: 50px;
-	width: 50px;
+
 	background-color: yellow;
 	box-shadow: 0 0 10px rgba(255, 255, 0, 0.8);
 }
