Arrumando a MainPage da Dash

--- a/API-Web-Data-Viz/public/css/dashboard.css
+++ b/API-Web-Data-Viz/public/css/dashboard.css
@@ -236,11 +236,33 @@ do "@media (max-width: 768px)" */
 }
 
 .main-content .container_api .grafico {
-	width: 45%;
+	width: 40%;
 	height: 50vh;
 	border: 2px solid #09d4db;
 	margin: 10px;
 	background-color: #05448091;
+}
+
+.main-content .container_api .grafico-pizza {
+	width: 40%;
+	height: 85vh;
+	border: 2px solid #09d4db;
+	margin: 10px;
+	background-color: #05448091;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.main-content .container_api .grafico-total{
+	width: 40%;
+	height: 20vh;
+	border: 2px solid #09d4db;
+	margin: 10px;
+	background-color: #05448091;
+	display: flex;
+	flex-direction: column;
+	align-items: center;	
 }
 
 .main-content .container_api .grafico2 {
@@ -407,7 +429,7 @@ do "@media (max-width: 768px)" */
 
 /* Estilo para os alertas */
 .alertas-graficos, .onibus {
-    background-color: #05448091	;
+    background-color: #05448091;
 		border: 2px solid #09d4db;
     color: white;
     padding: 20px;
