--- a/API-Web-Data-Viz/public/css/style.css
+++ b/API-Web-Data-Viz/public/css/style.css
@@ -85,7 +85,7 @@ img {
 	width: 50px;
 	height: 50px;
 	align-items: center;
-	background-image: url("./img/hamburguer.png");
+	background-image: url("../css/img/hamburguer.png");
 	background-size: cover;
 	background-color: transparent;
 	border: none;
@@ -209,6 +209,7 @@ img {
 	text-align: center;
 	margin-bottom: 5rem;
 	font-size: 2.5rem;
+	
 }
 
 #sobre-nos .container {
@@ -221,11 +222,11 @@ img {
 
 #sobre-nos .container .card {
 	width: 40%;
-	margin-bottom: 20px;
-	height: 450px;
+	margin-bottom: 10px;
+	height: 700px;
 	background-color: #fff;
 	box-shadow: 0px 0px 19px 7px rgba(0, 0, 0, 0.75);
-	padding: 20px;
+	padding: 10px;
 	border-radius: 10px;
 	box-sizing: border-box;
 	display: flex;
@@ -236,8 +237,8 @@ img {
 }
 
 .card-imagem {
-	width: 60%;
-	height: 50%;
+	width: 300px;
+	height: 300px;
 }
 
 .estrela {
