--- a/API-Web-Data-Viz/public/css/dashboard.css
+++ b/API-Web-Data-Viz/public/css/dashboard.css
@@ -235,6 +235,16 @@ do "@media (max-width: 768px)" */
 	border-radius: 15px;
 }
 
+.main-content .container_api .comparacao-main{
+	width: 70vw;
+	height: 60vh;
+	border: 2px solid #09d4db;
+	margin: 10px;
+	background-color: #05448091;
+	
+
+}
+
 .main-content .container_api .grafico {
 	width: 40%;
 	height: 50vh;
