--- a/API-Web-Data-Viz/public/css/dashboard.css
+++ b/API-Web-Data-Viz/public/css/dashboard.css
@@ -145,7 +145,7 @@ input {
 .sidebar {
 	background-color: #001d3d;
 	color: #fff;
-	width: 15%;
+	width: 200px;
 	border-right: 1px solid white;
 	height: 250vh;
 }
@@ -161,6 +161,7 @@ input {
 	padding: 0.2rem;
 	margin-left: 3%;
 	margin-bottom: 10%;
+	margin-top: 0 !important;
 }
 
 .wrapper .sidebar .botaoSidebar img {
