--- a/API-Web-Data-Viz/public/css/login.css
+++ b/API-Web-Data-Viz/public/css/login.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Roboto", sans-serif;
-}
+body { 
+	font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}	
 
 a{
   text-decoration: none;
@@ -12,7 +12,8 @@ a{
 }
 
 .background {
-  background-image: url('./img/Background.png');
+	margin-top: 20px;
+  background-image: url(../css/img/Background.png);
   background-size: cover;
   background-position: center;
   height: 100%;
@@ -22,18 +23,18 @@ a{
 
 
 .login {
-  background-color: #ffffff7e;
-  margin-top: -3%;
-  padding: 20px;
-  height: 80%;
-  width: 20%;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  box-shadow: 0px 0px 34px 12px rgba(0,0,0,0.75);
+	background-color: #ffffff7e;
+	margin-top: -3%;
+	padding: 20px;
+	height: 80%;
+	width: 20%;
+	border-radius: 10px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	box-shadow: 0px 0px 34px 12px rgba(0,0,0,0.75);
 }
 
 .container {
@@ -189,24 +190,59 @@ img {
 }
 
 .Cadastro {
-  background-color: #ffffff7c;
-  padding: 10px;
-  height: 75%;
-  width: 20%;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  box-shadow: 0px 0px 34px 12px rgba(0,0,0,0.75);
+    display: flex;
+    align-items: center;
+    width: 80%;
+    max-width: 800px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+.form{
+	flex: 1;
+    padding: 40px;
+}
+
+.form h2 {
+    margin-bottom: 20px;
+}
+
+.form input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.form button {
+    width: 100%;
+    padding: 10px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.image {
+    flex: 1;
+    background-image: url('sua-imagem.jpg');
+    background-size: cover;
+    background-position: center;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+}
+
+
+
 
 
 /* FOOTER */
 
 .footer {
-  height: 100px;
+  margin-top: 20px;
+  height: 80px;
   background-color: #001d3d;
   color: #fff;
   display: flex;
