--- a/API-Web-Data-Viz/public/css/style.css
+++ b/API-Web-Data-Viz/public/css/style.css
@@ -60,7 +60,7 @@ header {
 	color: #f5cc00;
 }
 
-img {
+.icone1 {
 	top: 0;
 	height: 200px;
 	width: 145px;
@@ -73,6 +73,7 @@ img {
 	margin-right: 50px;
 	color: white;
 	align-items: center;
+	white-space: nowrap;
 }
 
 .underheader {
@@ -333,3 +334,60 @@ img {
 .footer .container p {
 	font-weight: bold;
 }
+
+.menu-1 {
+
+	display: flex;
+	cursor: pointer;
+	width: 50px;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+	margin: 3%;
+	margin-top: 4.5%;
+  }
+  
+  .menu {
+	display: none; /* Inicialmente oculto */
+	position: fixed;
+	top: 0;
+	right: 0;
+	width: 220px; /* Largura do menu */
+	height: 100%; /* Altura igual à altura da tela */
+	background-color: #001d3d; /* Cor de fundo do menu */
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra para efeito de destaque */	
+  }
+  
+  .menu ul li {
+	margin-right: 30px; /* Espaçamento entre os itens da lista */
+	border-bottom: 1px solid black; /* Adicionar uma linha inferior */
+  }
+  
+  .menu.active {
+	display: block; /* Exibido quando ativo */
+  }
+  
+  .menu ul {
+	list-style-type: none;
+	padding: 0;
+  }
+  
+  .menu li {
+	padding: 10px;
+  }
+  
+  .menu a {
+	text-decoration: none;
+	color: #ffffff;
+	font-size: 3vh;
+	font-family: "Cinzel", serif;
+  }
+  
+  .menu a:hover {
+	color: #f5cc00;
+  }
+  
+  .hamburguer{
+	width: 70px;
+	margin-top: -7px;
+  }
