--- a/API-Web-Data-Viz/public/css/dashboard.css
+++ b/API-Web-Data-Viz/public/css/dashboard.css
@@ -511,3 +511,30 @@ do "@media (max-width: 768px)" */
 .main-content .container_api .texto-longoPrazo h1{
 	color: white;
 }
+
+/* BOTÃO DE EXIBIR AS LINHAS */
+
+#dados{
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+
+	gap: 2rem;
+}
+
+.btn-carregar{
+	background-color: #05448091;
+	color: white;
+	padding: 10px 20px;
+	border: none;
+	border-radius: 10px;
+	cursor: pointer;
+}
+
+#listaLinhas{
+	width: 11..5%;
+	padding: 10px;
+	border: none;
+	border-radius: 10px;
+}
