Finalizaço da pagina de central de ajuda

--- a/API-Web-Data-Viz/public/css/config.css
+++ b/API-Web-Data-Viz/public/css/config.css
@@ -18,6 +18,7 @@ body {
 	color: #fff;
 	border-bottom: 1px solid white;
 	width: 100%;
+	margin-top: 5%;
 }
 
 .botao {
@@ -43,19 +44,19 @@ body {
 	position: fixed;
 	top: 0;
 	right: 0;
-	width: 240px; /* Largura do menu */
-	height: 100%; /* Altura igual à altura da tela */
-	background-color: #001d3d; /* Cor de fundo do menu */
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra para efeito de destaque */	
+	width: 240px; 
+	height: 100%; 
+	background-color: #001d3d; 
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 	
   }
   
   .menu ul li {
-	margin-right: 30px; /* Espaçamento entre os itens da lista */
-	border-bottom: 1px solid black; /* Adicionar uma linha inferior */
+	margin-right: 30px;
+	border-bottom: 1px solid black; 
   }
   
   .menu.active {
-	display: block; /* Exibido quando ativo */
+	display: block; 
   }
   
   .menu ul {
@@ -313,7 +314,7 @@ margin-bottom: 20px;
 .card-button {
 display: inline-block;
 padding: 10px 20px;
-background-color: #007bff;
+background-color: #001d3d;
 color: #fff;
 text-decoration: none;
 border-radius: 5px;
@@ -328,4 +329,64 @@ transform: translateY(-10px);
 .card2:hover {
 transform: translateY(-10px);
 }
+
+.icone1 {
+    position: absolute;
+    top: -65px;
+    left: 0;
+    height: 200px;
+    width: 145px;
+    clip-path: inset(50px 20px 69px 0 round 50px);
+}
+
+.menu-1 {
+	display: flex;
+	cursor: pointer;
+	width: 70px;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+	margin: 3%;
+	margin-top: 4.5%;
+  }
+  
+  .menu {
+	display: none; 
+	position: fixed;
+	top: 0;
+	right: 0;
+	width: 220px; 
+	height: 100%; 
+	background-color: #001d3d; 
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 	
+  }
+  
+  .menu ul li {
+	margin-right: 30px; 
+	border-bottom: 1px solid black; 
+  }
+  
+  .menu.active {
+	display: block; 
+  }
+  
+  .menu ul {
+	list-style-type: none;
+	padding: 0;
+  }
+  
+  .menu li {
+	padding: 10px;
+  }
+  
+  .menu a {
+	text-decoration: none;
+	color: #ffffff;
+	font-size: 3vh;
+	font-family: "Cinzel", serif;
+  }
+  
+  .menu a:hover {
+	color: #f5cc00;
+  }
 
