--- a/API-Web-Data-Viz/public/css/config.css
+++ b/API-Web-Data-Viz/public/css/config.css
@@ -151,7 +151,7 @@ border-bottom-right-radius: 8px;
 }
   
 header {
-position: relative;
+position: fixed;
 width: 100%;
 height: 70px;
 font-weight: bold;
@@ -160,6 +160,7 @@ align-items: center;
 justify-content: flex-end;
 background-color: #001d3d;
 z-index: 1;
+border-bottom: 2px solid #ffffff;
 }
 
 .itemsHeader {
