--- a/API-Web-Data-Viz/public/css/dashboard.css
+++ b/API-Web-Data-Viz/public/css/dashboard.css
@@ -187,7 +187,7 @@ input {
 	color: #fff;
 	width: 200px;
 	border-right: 1px solid white;
-	height: 250vh;
+	height: 200vh;
 	padding: 10px;
 }
 
@@ -306,14 +306,16 @@ do "@media (max-width: 768px)" */
 }
 
 .main-content .container_api .grafico-total{
-	width: 40%;
-	height: 20vh;
+	width: auto;
+	height: auto;
+	padding: 10px;
 	border: 2px solid #09d4db;
 	margin: 10px;
 	background-color: #05448091;
 	display: flex;
 	flex-direction: column;
 	align-items: center;	
+
 }
 
 .main-content .container_api .grafico2 {
